[workspace]
resolver = "2"

members = [
    "stomp",
    "stomp-client", "stomp-scale",
    "stomp-server",
]

[workspace.package]
version = "0.1.0"
authors = [
  "garypen <garypen@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/garypen/stomp"
homepage = "https://github.com/garypen/stomp"
documentation = "https://github.com/garypen/stomp#readme"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
strum = { version = "0.27.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4"] }
