[package]
name = "stomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bytes = "1.5.0"
futures.workspace = true
indexmap = "2.2.5"
nom = "7.1.3"
rust-fsm = "0.7.0"
strum.workspace = true
thiserror = "2.0.8"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lib]
name = "stomp"
path = "src/lib.rs"
