[package]
name = "stomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bytes = "1.9.0"
futures.workspace = true
indexmap = "2.7.0"
nom = "7.1.3"
rust-fsm = "0.7.0"
strum.workspace = true
thiserror = "2.0.9"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lib]
name = "stomp"
path = "src/lib.rs"
